# bevy-experiments

./: .gitignore  Cargo.toml  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: build-and-upload.yml
elastic-box/: Cargo.toml
elastic-box/src/: main.rs
experiments/elastic-box/: Cargo.toml  project.json
experiments/elastic-box/src/: lib.rs  main.rs
experiments/resize/: Cargo.toml  project.json
experiments/resize/src/: lib.rs  main.rs
resize/: Cargo.toml
resize/src/: main.rs
www/: index.html  project.json  vite.config.ts
www/src/: styles.scss
www/src/components/: Card.vue
www/src/router/: index.ts
www/src/views/: BevyView.vue  GameView.vue  HomeView.vue
