[package]
name = "elastic-box"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.14.1"
bevy-inspector-egui = { version = "0.25.2", default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
    "egui_open_url",
] }
bevy_mod_picking = { version = "0.20.1", default-features = false, features = [
    "backend_sprite",
    "debug",
] }
wasm-bindgen = "0.2.93"
