[package]
name = "resize"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy-inspector-egui = { version = "0.25.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
    "egui_open_url",
] }
bevy = { version = "0.14.1", features = ["webp"] }
bevy_mod_picking = { version = "0.20.1", features = ["selection", "highlight"] }
bevy_web_asset = "0.9.0"
wasm-bindgen = "0.2.93"
